fixed color in data visualization

--- a/data/lab7/saved_data/history.txt
+++ b/data/lab7/saved_data/history.txt
@@ -33,3 +33,16 @@ Get recommendations
 Get recommendations
 Get recommendations
 Get recommendations
+Get Artist the weeknd
+Get Artist віорія
+Get Artist vioria
+Get Artist a
+Get Track a
+Get Artist a
+Get Artist aa
+Get Artist a
+Get Artist a
+Get Artist a
+Get Artist a
+Get Artist ф1
+Get Artist ф
